--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
+
+
+@import "footer";
+@import "banner";
+@import "bootstrap-custom";
+@import "home";
+@import "info";
 
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
