Helpers para modificar datos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <%= render 'shared/header.html.erb' %>
     </header>
     <main role="main">
-      <%= render 'layouts/messages' %>
+      <%#= render 'layouts/messages' %>
       <%= yield %>
     </main>
     <footer>
