--- a/app/views/datos_personals/new.html.erb
+++ b/app/views/datos_personals/new.html.erb
@@ -1,3 +1,2 @@
-<h1>Agregar datos personales</h1>
-<%= render 'form' %>
-<%= link_to 'Regresar', datos_personals_path %>
+<%= render 'form', labelBoton: "Agregar"%>
+
